<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/flamenco_light"
        android:text="@string/about_title"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="48sp"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="70dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/about_body"
        android:textColor="@color/colorGray"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="135dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:text="@string/about_version"
        android:textColor="@color/darker_gray"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"/>


</android.support.constraint.ConstraintLayout>